1，对HTML的文本进行处理，在翻译前记录是否有空格，翻译后在恢复回去。