@@ -31,11 +31,11 @@ public class LiquidHtmlTranslatorUtils {
     private final ALiYunTranslateIntegration aLiYunTranslateIntegration;
     // 不翻译的URL模式
     public static final Pattern URL_PATTERN = Pattern.compile("https?://[^\\s<>\"]+|www\\.[^\\s<>\"]+");
-//    // 不翻译的Liquid变量模式
+    //    // 不翻译的Liquid变量模式
 //    public static final Pattern VARIABLE_PATTERN = Pattern.compile("\\{\\{[^}]+\\}\\}");
     // 自定义变量模式：%{ order.name } 等
     public static final Pattern CUSTOM_VAR_PATTERN = Pattern.compile("\\{\\{[^}]+\\}\\}|\\{\\w+\\}|%\\{[^}]+\\}|\\{%(.*?)%\\}|\\[[^\\]]+\\]");
-//    // Liquid条件语句模式：{% if order.po_number != blank %} 等
+    //    // Liquid条件语句模式：{% if order.po_number != blank %} 等
 //    public static final Pattern LIQUID_CONDITION_PATTERN = Pattern.compile("\\{%[^%]+%\\}");
 //    // 数组变量模式：[ product[1]] 等
 //    public static final Pattern ARRAY_VAR_PATTERN = Pattern.compile("\\[\\s*[^\\]]+\\s*\\]");
@@ -44,7 +44,10 @@ public class LiquidHtmlTranslatorUtils {
     // 判断是否有 <html> 标签的模式
     public static final Pattern HTML_TAG_PATTERN = Pattern.compile("<\\s*html\\s*", Pattern.CASE_INSENSITIVE);
     // 从配置文件读取不翻译的标签，默认为 "style,img,script"
-    public final static Set<String> NO_TRANSLATE_TAGS = new HashSet<>(Arrays.asList("style", "img", "script"));
+    public final static Set<String> NO_TRANSLATE_TAGS = Set.of("script", "style", "meta", "svg", "canvas", "link");
+    private final static Set<String> INLINE_TAGS = Set.of(
+            "strong"
+    );
     private final JsoupUtils jsoupUtils;
 
     @Autowired
@@ -55,6 +58,7 @@ public class LiquidHtmlTranslatorUtils {
 
     /**
      * 主翻译方法
+     *
      * @param
      * @param html 输入的HTML文本
      * @return 翻译后的HTML文本
@@ -230,7 +234,8 @@ public class LiquidHtmlTranslatorUtils {
                         request.setContent(cleanedText);
 //                            appInsights.trackTrace("要翻译的文本： " + cleanedText);
 //                            System.out.println("要翻译的文本1： " + cleanedText);
-                        targetString = jsoupUtils.translateAndCount(request, counter, languagePackId, GENERAL, limitChars);
+//                        targetString = jsoupUtils.translateAndCount(request, counter, languagePackId, GENERAL, limitChars);
+                        targetString = addSpaceAfterTranslated(cleanedText, request, counter, languagePackId, limitChars);
                         result.append(targetString);
                     } catch (ClientException e) {
                         // 如果AI翻译失败，则使用谷歌翻译
@@ -260,8 +265,9 @@ public class LiquidHtmlTranslatorUtils {
                 try {
                     request.setContent(cleanedText);
 //                        appInsights.trackTrace("处理剩余文本： " + cleanedText);
-//                        System.out.println("要翻译的文本2： " + cleanedText);
-                    targetString = jsoupUtils.translateAndCount(request, counter, languagePackId, GENERAL, limitChars);
+//                    System.out.println("要翻译的文本2： " + cleanedText);
+//                    targetString = jsoupUtils.translateAndCount(request, counter, languagePackId, GENERAL, limitChars);
+                    targetString = addSpaceAfterTranslated(cleanedText, request, counter, languagePackId, limitChars);
                     result.append(targetString);
                 } catch (ClientException e) {
                     result.append(cleanedText);
@@ -317,7 +323,7 @@ public class LiquidHtmlTranslatorUtils {
     /**
      * 翻译html文本（整段翻译，需要处理一下）
      * 目前专门用qwen翻译
-     * */
+     */
     public String fullTranslateHtmlByQwen(String text, String languagePack, CharacterCountUtils counter, String target, String shopName, Integer limitChars) {
         //选择翻译html的提示词
         String targetLanguage = getLanguageName(target);
@@ -336,7 +342,7 @@ public class LiquidHtmlTranslatorUtils {
     /**
      * 翻译html文本（整段翻译，需要处理一下）
      * 目前专门用qwen翻译
-     * */
+     */
     public String fullTranslatePolicyHtmlByQwen(String text, CharacterCountUtils counter, String target, String shopName, Integer limitChars) {
         //选择翻译html的提示词
         String targetLanguage = getLanguageName(target);
@@ -350,5 +356,58 @@ public class LiquidHtmlTranslatorUtils {
             appInsights.trackTrace("html 翻译失败 errors : " + e);
             return text;
         }
+    }
+
+    /**
+     * 手动添加空格
+     */
+    public String addSpaceAfterTranslated(String sourceText, TranslateRequest request, CharacterCountUtils counter, String languagePackId, Integer limitChars) {
+        // Step 1: 记录开头和结尾的空格数量
+        int leadingSpaces = countLeadingSpaces(sourceText);
+        int trailingSpaces = countTrailingSpaces(sourceText);
+
+        // Step 2: 去除首尾空格，准备翻译
+        String textToTranslate = sourceText.trim();
+
+        // Step 3: 翻译操作
+        request.setContent(textToTranslate);
+        String targetString = jsoupUtils.translateAndCount(request, counter, languagePackId, GENERAL, limitChars);
+//        String targetString = textToTranslate + 1;
+        // Step 4: 恢复开头和结尾空格
+        StringBuilder finalResult = new StringBuilder();
+        for (int i = 0; i < leadingSpaces; i++) {
+            finalResult.append(" ");
+        }
+        finalResult.append(targetString);
+        for (int i = 0; i < trailingSpaces; i++) {
+            finalResult.append(" ");
+        }
+//        System.out.println("finalResult: " + "'" + finalResult.toString() + "'");
+
+        return finalResult.toString();
+    }
+
+    private static int countLeadingSpaces(String s) {
+        int count = 0;
+        for (char c : s.toCharArray()) {
+            if (c == ' ') {
+                count++;
+            } else {
+                break;
+            }
+        }
+        return count;
+    }
+
+    private static int countTrailingSpaces(String s) {
+        int count = 0;
+        for (int i = s.length() - 1; i >= 0; i--) {
+            if (s.charAt(i) == ' ') {
+                count++;
+            } else {
+                break;
+            }
+        }
+        return count;
     }
 }
